examples/invalid/type-error.juni
fn main : x =>
  1 + true
